# tokenizers-sys

./: .gitignore  Cargo.toml  PROPOSAL.md  README.md  build.rs  compile_ex.sh  fetch_resources.sh  justfile
examples/: tokenize.c
examples/c/: tokenize.c
examples/go/: go.mod  main.go
examples/java/: jni_wrapper.c  pom.xml
examples/java/src/main/java/: TokenizerExample.java
examples/java/src/main/java/com/tokenizers/: Encoding.java  Tokenizer.java
examples/kotlin/: build.gradle.kts
examples/kotlin/src/main/kotlin/: TokenizerExample.kt
examples/kotlin/src/main/kotlin/com/tokenizers/: Encoding.kt  Tokenizer.kt
examples/zig/: build.zig
examples/zig/src/: ctokenizers.h  main.zig
src/: encoding.rs  lib.rs  tokenizer.rs
